:iphone: Improved responsive behavior, final touches (hopefully) - Mobile: Fixed spacing, centering - Mobile: Removed col-sm-* - Nav: Increased  for mobile & tablet - Nav: Added Scrollspy behavior (custom code), bs4 spy didn't work - Improved  visibility - Switched to %-based spacing for SVGs - Added description & link in Contact section - Minor UI tweaks in Contact & Footer sections - Added Browser theme & logo as bg image

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,7 +12,8 @@ html
 	scroll-behavior: smooth
 
 body
-	background: #000
+	background: $brand url(assets/brand/bg-tedx-trans.png) center center no-repeat
+	background-size: 90%
 	color: #000
 	font-family: $sans-serif
 	font-size: 16px
@@ -51,6 +52,10 @@ a.lite
 
 h1, h2, h3, h4, h5, h6
 	font-family: $serif
+
+@media( #{$bp-sm})
+	p
+		word-break: break-word
 
 .btn, .btn:hover, .btn:focus
 	background: $brand
@@ -95,15 +100,16 @@ h1, h2, h3, h4, h5, h6
 		border: none
 		outline: none
 		padding: 2rem
+		@media( #{$bp-md})
+			transform: scale(1.5)
 		.navbar-toggler-icon
 			background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='hsl(4, 80%, 100%)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E")
 
 .nav-link
 	color: #FFF !important
 	font-family: $sans-serif
-	font-size: 18px
+	font-size: 1.75rem
 	font-weight: 700
-	line-height: 18px
 	margin: 0 2rem
 	padding: 1rem
 	text-align: right
@@ -111,8 +117,10 @@ h1, h2, h3, h4, h5, h6
 	&:hover
 		color: $brand !important
 	@media( #{$bp-md})
+		font-size: 4rem
+	@media( #{$bp-lg})
 		border-top: 2px solid transparent
-		font-size: 14px
+		font-size: 1rem
 		margin: 0 1.2rem
 		padding: 1.5rem 0 !important
 		text-align: center
@@ -131,7 +139,7 @@ h1, h2, h3, h4, h5, h6
 	padding: 0
 
 // 100% height mobile menu
-@media( #{$bp-sm})
+@media(max-width: 992px)
 	.navbar-collapse
 		&.collapse
 			height: 100vh
@@ -194,7 +202,7 @@ h1, h2, h3, h4, h5, h6
 		font-weight: 700
 		left: -17.5vh
 		letter-spacing: 11vh
-		margin-top: 0px
+		margin-top: 50px
 		position: fixed
 		text-shadow: 0 1px 5px rgba(0,0,0,.25)
 		top: 27.5vh
@@ -218,8 +226,8 @@ h1, h2, h3, h4, h5, h6
 			height: 2px
 			margin: 0
 			position: absolute
-			right: -15vh
-			width: 20vh
+			right: -45vh
+			width: 50vh
 			box-shadow: 0 1px 5px rgba(0,0,0,.25)
 
 .date-location
@@ -237,17 +245,22 @@ h1, h2, h3, h4, h5, h6
 		padding: 2.5rem
 		position: absolute
 
+#About, #Speakers, #Partners, #Contact
+	padding-top: 5rem
+	padding-bottom: 5rem
+	@media( #{$bp-md})
+		padding-top: 10rem
+		padding-bottom: 10rem
+
 #About
 	background: #000
 	color: #FFF
-	padding: 10rem
 	h2
 		margin-top: 6rem
 
 #Speakers
 	background: $brand
 	color: #FFF
-	padding: 10rem
 	svg
 		border: 5px dashed #FFF
 		fill: #FFF
@@ -255,7 +268,6 @@ h1, h2, h3, h4, h5, h6
 #Partners, #Contact
 	background: #FFF
 	color: #000
-	padding: 10rem
 	svg
 		border: 5px dashed $brand
 		fill: $off-brand
@@ -265,27 +277,28 @@ h1, h2, h3, h4, h5, h6
 		display: block
 		box-sizing: border-box
 		width: 100%
-		padding: 50px
+		padding: 20%
 		border-radius: 30px
 		stroke-width: 0
 		transition: $transition-val
 		&:hover
-			padding: 35px
-
-#Contact::after
-	content: " "
-	background: $brand
-	display: block
-	height: 200px
-	margin-top: -150px
-	position: absolute
-	left: -5vw
-	width: 35vw
-	transform: skew(25deg)
+			padding: 17%
+@media( #{$bp-md})
+	#Contact::after
+		content: " "
+		background: $brand
+		display: block
+		height: 400px
+		margin-top: -175px
+		position: absolute
+		left: -25vw
+		width: 55vw
+		transform: skew(25deg)
 
 #End-Game
 	background-size: 40%
 	background: #000 url('assets/brand/bg-tedx-trans.png') bottom -30px center no-repeat
 	color: #FFF
-	padding-top: 4rem
-	padding-bottom: 150px
+	padding-top: 6rem
+	padding-bottom: 118px
+	border-bottom: 6px solid $off-brand
